Further study, adding a madlib template

--- a/static/madlibs.css
+++ b/static/madlibs.css
@@ -1,7 +1,9 @@
 body {
     font-family: sans-serif;
+    color: blue;
+    background-color: #FFC0CB;
 }
 
 form {
-    color: blue;
+    background-color: #FFC0CB;
 }
