--- a/templates/compliment.html
+++ b/templates/compliment.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>A Compliment</title>
+  <link rel="stylesheet" href="/static/css/madlibs.css">
 </head>
 <body>
     Hi {{ person }}! I think you're {{ compliment }}! <br>
