--- a/templates/game.html
+++ b/templates/game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Hi There!</title>
-  <link rel="stylesheet" href="../static/madlibs.css">
+  <link rel="stylesheet" href="/static/css/madlibs.css">
 </head>
 <body>
 <form action="/madlib">
