--- a/templates/madlib.html
+++ b/templates/madlib.html
@@ -2,8 +2,11 @@
 <html>
 <head>
   <title>madlib</title>
+  <link rel="stylesheet" href="/static/css/madlibs.css">
 </head>
 <body>
-<p>There once was {{ article }} {{ color }} {{ noun }} {{ verb }} in the Hackbright Lab. When {{ person }} went to pick it up, {{ preposition }} it burst into flames in a totally {{ adjective }} way {{ punctuation }}</p>
+
+    <p>{{sentence}}</p>
+    
 </body>
 </html>
