--- a/templates/hello.html
+++ b/templates/hello.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Hi There!</title>
+  <link rel="stylesheet" href="/static/css/madlibs.css">
 </head>
 <body>
 
@@ -11,6 +12,8 @@
   What's your name? <input type="text" name="person">
   <input type="submit">
 </form>
+<br>
+<div></div><img src="/static/images/jefferson.jpg"></a></div>
 
 </body>
 </html>
