--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,6 @@
     <div>We are happy you are applying to work with us.</div>
     <br>
 
-    <div>Please click <a href="./application-form.html">here</a> to complete your application.</div>
+    <div>Please click <a href="application-form">here</a> to complete your application.</div>
 
 {% endblock %}
