Flask and Jinja working. CSS/Bootstrap time

--- a/templates/application-response.html
+++ b/templates/application-response.html
@@ -3,6 +3,6 @@
 {% block body %}
 
     Thank you, {{ applicant }}, for applying to be a {{ job_choice }}. Your
-    minimum salary requirement is ${{ salary_requirement|round(3) }}.
+    minimum salary requirement is {{ "${:,.2f}".format(salary_requirement|float) }}.
 
 {% endblock %}
