--- a/templates/application-form.html
+++ b/templates/application-form.html
@@ -2,36 +2,37 @@
 
 {% block body %}
 
-    <h1>Application Form</h1>
 
-        <p class="instructions">
-            This application is <i>very</i> important. Please proof-read before submitting
-        </p>
+<h1>Application Form</h1>
 
-    <form action="/application-success">
+    <p id="instructions">
+        This application is <i>very</i> important. <br>Please proof-read before submitting
+    </p>
 
-        <label for="firstname">First Name:</label>
-        <input id="submission_info" type="text" name="firstname">
-        <br>
+<form action="/application-success" method="POST">
 
-        <label for="lastname"><b>Last Name</b>:</label>
-        <input id="submission_info" type="text" name="lastname">
-        <br>
+    <label for="firstname">First Name:</label>
+    <input id="submission_info" type="text" name="firstname">
+    <br>
 
-        Job Applying for:
-            <select name="open_position">
-                {% for job_title in jobs %}
-                <option value="{{ job_title }}">{{ job_title }}</option>
-                {% endfor %}
-            </select>
-        <br>
+    <label for="lastname"><b>Last Name</b>:</label>
+    <input id="submission_info" type="text" name="lastname">
+    <br>
 
-        <label for="salary_required">Your requested salary:</label>
-        <input id="submission_info" type="text" name="salary_required">
-        <br>
+    <label for="jobapplying">Job Applying for:</label>
+        <select id="submission_info" name="open_position">
+            {% for job_title in jobs %}
+            <option value="{{ job_title }}">{{ job_title }}</option>
+            {% endfor %}
+        </select>
+    <br>
 
-        <input type="submit" class="submission_info">
+    <label for="salary_required">Your requested salary: $</label>
+    <input id="submission_info" type="text" placeholder="ex. 45000" name="salary_required">
+    <br>
 
-    </form>
+    <input id="submission_info" type="submit" name="submit">
+
+</form>
 
 {% endblock %}
