--- a/templates/application-response.html
+++ b/templates/application-response.html
@@ -2,7 +2,8 @@
 
 {% block body %}
 
-    Thank you, {{ applicant }}, for applying to be a {{ job_choice }}. Your
-    minimum salary requirement is {{ "${:,.2f}".format(salary_requirement|float) }}.
+
+Thank you, {{ applicant }}, for applying to be a {{ job_choice }}. Your minimum salary requirement is {{ "${:,.2f}".format(salary_requirement|float) }}.
+
 
 {% endblock %}
