--- a/templates/base.html
+++ b/templates/base.html
@@ -1,44 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet"
-          href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.css"/>
-    <link rel="stylesheet" type="text/css" href="static/CSS/styles.css">
-    <title>Application Form</title>
-</head>
+<link rel="stylesheet"
+      href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.css"/>
+<link rel="stylesheet" type="text/css" href="static/CSS/styles.css">
+<title>Application Form</title>
+
 
 <body>
 
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <a class="navbar-brand">Job Application</a>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-offset-4 col-md-4 col-lg-offset-3 col-lg-6">
+
+      <a class="logo"/a>
+        <img id="logo-image" class="image-resposive" alt="Job Application" src="static/Images/FBISEAL.png" />
+      </a>
+
+      <!-- This is where the main content goes. -->
+      {% block body %}
+          BODY
+      {% endblock %}
+
     </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-    <!-- Show flashed messages -->
-    {% with messages = get_flashed_messages() %}
-        {% for message in messages %}
-            <div class="alert alert-warning">{{ message }}</div>
-        {% endfor %}
-    {% endwith %}
-
-    <!-- This is where the main content goes. -->
-    {% block body %}
-        BODY
-    {% endblock %}
-
   </div>
+</div>
 
-  <div id="footer">
-  Good luck!
-  </div>
+<footer>Copyright 2017. FBI USA</footer>
+
 </body>
 </html>
