--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,16 @@
 {% extends 'base.html' %}
 
 {% block body %}
+<link rel="stylesheet"
+      href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.css"/>
+<link rel="stylesheet" type="text/css" href="static/CSS/styles.css">
 
-    <h1>Welcome.</h1>
-    <br>
+            
+<h1>Welcome</h1>
+<br>
 
-    <div>We are happy you are applying to work with us.</div>
-    <br>
+<p>We are happy you are applying to work with us. Working for the FBI is serious business. <br> Please click <a href="application-form">here</a> to complete your application.</p>
+<br>
 
-    <div>Please click <a href="application-form">here</a> to complete your application.</div>
 
 {% endblock %}
