We can register user and they can login/logout. YES!

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,10 +5,19 @@
 </head>
 
 <body>
-  Ratings
-  <hr>
+    <div>
+        {% with messages = get_flashed_messages() %}
+        {% for message in messages %}
+          <div class="alert alert-warning">{{ message }}</div>
+        {% endfor %}
+        {% endwith %}
+    </div>
+    
+    <div>
+      Ratings
+      <br>
 
   {% block content %} put your content here {% endblock %}
-
+    </div>
 </body>
 </html>
