Need to finish movies input ratings and Judgemental Eye

--- a/templates/sign_in.html
+++ b/templates/sign_in.html
@@ -8,7 +8,7 @@
         <input id="username-id" type="text" name="username" placeholder="email">
         <br>
         <label for="password">Password:</label>
-        <input id="username-id" type="text" name="password" placeholder="Password">
+        <input id="username-id" type="password" name="password" placeholder="Password">
         <br>
         <input type="submit">
     </form>
