--- a/templates/register_form.html
+++ b/templates/register_form.html
@@ -9,7 +9,7 @@
         <br>
 
         <label for="password">Password:</label>
-        <input id="username-id" type="text" name="password" placeholder="Password" required>
+        <input id="username-id" type="password" name="password" placeholder="Password" required>
         <br>
 
         <label for="age">Your age:</label>
